--- a/morrisons_store_finder/src/Components/Home/Home.css
+++ b/morrisons_store_finder/src/Components/Home/Home.css
@@ -1,15 +1,31 @@
 /* Keep existing styles */
-.main{
+
+
+
+
+ .main{
     
     height: 400px;
     background-image: linear-gradient(90deg, #004e37, #00893f);
 }
 
 
+
 .logo{
-  height: 3rem;
+  height: 48px;
   width: 132px;
+  /* margin :0 auto; */
+  margin-left: 3.5rem;
+  padding: 1.5rem 1.5rem;
 }
+
+.main_section{
+  max-width: 100%;           
+  margin: 0 auto;
+  padding: 2.5rem 2.5rem;         
+  
+} 
+
 
 /* Accessibility helper (keeps heading for screen readers only) */
 .visually-hidden {
