--- a/morrisons_store_finder/src/Components/StoreCard/StoreCard.css
+++ b/morrisons_store_finder/src/Components/StoreCard/StoreCard.css
@@ -12,7 +12,7 @@
   transition: all 0.3s ease;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
   list-style: none;
-  width: 100%;
+  width: -webkit-fill-available;
   display: flex;
   flex-direction: column;
 }
